create side bar for widget

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -12,3 +12,10 @@
     height: 0;
     overflow: hidden;
 }
+
+.sideBarOpen.halfSideBar .sideBar {
+    opacity: 1;
+    transform: translateX(0px);
+    height: 50%;
+    overflow: auto;
+}
