--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+#bt_sidebar_right_arrow {
+  visibility: hidden;
+}
+
+#bt_sidebar_parent:hover #bt_sidebar_right_arrow {
+  visibility: visible;
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -19,7 +65,7 @@ a {
   box-sizing: border-box;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -28,14 +74,3 @@ a {
     background: black;
   }
 } */
-
-
-.full-height {
-  height: calc(100vh - 60px)
-}
-.overflow-hidden {
- overflow: hidden;
-}
-.overflow-auto {
-  overflow: auto;
-}
