--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,9 +97,9 @@ a {
 .overflow-auto {
   overflow: auto;
 }
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* hide bokeh logo */
 .bk-logo {
